Add noise as `type`

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                         <label><input type="radio" name="radio-type" value="square" /> square</label>
                         <label><input type="radio" name="radio-type" value="sawtooth" /> sawtooth</label>
                         <label><input type="radio" name="radio-type" value="triangle" /> triangle</label>
+                        <label><input type="radio" name="radio-type" value="noise" /> noise</label>
                     </form>
                 </dd>
                 <dt><label for="range-volume">volume : <span id="output-volume">1</span></label></dt>
