Add UI and Event listener

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                 </dd>
                 <dt><label for="range-volume">volume : <span id="output-volume">1</span></label></dt>
                 <dd><input type="range" id="range-volume" value="1" min="0" max="1" step="0.05" /></dd>
+                <dt><label for="range-octave">octave : <span id="output-octave">0</span></label></dt>
+                <dd><input type="range" id="range-octave" value="0" min="-4" max="4" step="1" /></dd>
                 <dt><label for="range-transpose">transpose : <span id="output-transpose">0</span></label></dt>
                 <dd><input type="range" id="range-transpose" value="0" min="0" max="2" step="0.125" /></dd>
                 <dt><label for="range-glide">glide : <span id="output-glide">0</span></label></dt>
@@ -164,6 +166,13 @@
 
                 xpiano.setAttribute('volume', volume);
                 document.getElementById('output-volume').textContent = volume;
+            }, false);
+
+            document.getElementById('range-octave').addEventListener('input', event => {
+                const octave = event.currentTarget.value;
+
+                xpiano.setAttribute('octave', octave);
+                document.getElementById('output-octave').textContent = octave;
             }, false);
 
             document.getElementById('range-transpose').addEventListener('input', event => {
