--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                         <label><input type="radio" name="radio-type" value="square" /> square</label>
                         <label><input type="radio" name="radio-type" value="sawtooth" /> sawtooth</label>
                         <label><input type="radio" name="radio-type" value="triangle" /> triangle</label>
-                        <label><input type="radio" name="radio-type" value="noise" /> noise</label>
+                        <label><input type="radio" name="radio-type" value="whitenoise" /> white noise</label>
+                        <label><input type="radio" name="radio-type" value="pinknoise" /> pink noise</label>
                     </form>
                 </dd>
                 <dt><label for="range-volume">volume : <span id="output-volume">1</span></label></dt>
